fixed minor spacing issue

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -196,6 +196,8 @@ p.copyright {
 .WhoWeAre {
     padding-top: 75px;
     background: url("../img/StJohnBridge.jpg") no-repeat center center;
+    color: white;
+
 }
 
 .whoWeAreText {
@@ -266,3 +268,5 @@ a:active {
   color: #333 !important;
 }
 /*End CSS for making Navbar transparent*/
+
+
